# Cheap-finder

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  render.yaml  requirements.txt
.claude/: launch.json  settings.local.json
scripts/: cleanup_apfr.py  fix_apfr_brand.py  fix_apfr_keep_incense.py  sync_from_prod.py
src/: auth.py  config.py  main.py
src/alerts/: notifier.py  rules.py
src/api/: routes_alerts.py  routes_brands.py  routes_dashboard.py  routes_products.py
src/brands/: discovery.py  registry.py  rematch.py
src/db/: models.py  session.py
src/retailers/: __init__.py  altitude_sports.py  base.py  bluebuttonshop.py  generic.py  haven.py  hip_store.py  livestock.py  nordstrom.py  nrml.py  shopify_base.py  simons.py  sporting_life.py  ssense.py  the_last_hunt.py
src/templates/: alerts.html  base.html  brand_detail.html  dashboard.html  deals.html  login.html  notifications.html  product_detail.html  search_results.html  suggest_retailer.html  wishlist.html
src/templates/components/: deals_pagination.html  nav.html  pagination.html  price_chart.html  product_card.html  wishlist_empty.html  wishlist_grid.html
src/tracking/: comparison.py  history.py  price_checker.py  scheduler.py
tests/: conftest.py
tests/test_brands/: test_matching.py
